--- a/contact/css/base.css
+++ b/contact/css/base.css
@@ -12,7 +12,7 @@ html {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url("resources/load.gif") center no-repeat #000;
+  background: url("../../resources/load.gif") center no-repeat #000;
   background-size: 90px;    
 }
 
